html tag and prediction

--- a/data.ipynb
+++ b/data.ipynb
@@ -275,22 +275,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array(['Metropolitian', 'Urban', nan, 'Semi-Urban'], dtype=object)"
+       "array([1, 2, 0, 3], dtype=int64)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df[\"City\"].unique()"
+    "df[\"Vehicle_condition\"].unique()"
    ]
   },
   {
